...
            >
              <Ionicons name="list" size={20} color="#fff" />
            </LinearGradient>
          </View>

          <View>
            <Text testID="total-todo-value" style={settingsStyles.statNumber}>
              {totalTodos}
            </Text>
            <Text testID="total-todo-text" style={settingsStyles.statLabel}>
              Total Todos
            </Text>
          </View>
        </LinearGradient>

        {/* COMPLETED TODOS */}
...
            >
              <Ionicons name="checkmark-circle" size={20} color="#fff" />
            </LinearGradient>
          </View>

          <View>
            <Text testID="completed-todo-value" style={settingsStyles.statNumber}>
              {completedTodos}
            </Text>
            <Text testID="completed-todo-text" style={settingsStyles.statLabel}>
              Completed
            </Text>
          </View>
        </LinearGradient>

        {/* ACTIVE TODOS */}
...
            >
              <Ionicons name="time" size={20} color="#fff" />
            </LinearGradient>
          </View>

          <View>
            <Text testID="active-todo-value" style={settingsStyles.statNumber}>
              {activeTodos}
            </Text>
            <Text testID="active-todo-text" style={settingsStyles.statLabel}>
              Active
            </Text>
          </View>
        </LinearGradient>
      </View>
    </LinearGradient>
...
